<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- motion constrain -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_constrain_left_switch"
        android:title="@string/pref_title_constrain_left_switch" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_constrain_left_hor"
        android:title="@string/pref_title_constrain_left_hor"
        android:dependency="pref_constrain_left_switch"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_constrain_left_ver"
        android:title="@string/pref_title_constrain_left_ver"
        android:dependency="pref_constrain_left_switch"/>


    <!-- left stick value -->

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_left_switch"
        android:title="@string/pref_title_left_switch" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_left_pos_up"
        android:inputType="textCapWords"
        android:key="pref_left_pos_up"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_left_pos_up"
        android:dependency="pref_left_switch"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_left_pos_down"
        android:inputType="textCapWords"
        android:key="pref_left_pos_down"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_left_pos_down"
        android:dependency="pref_left_switch"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_left_pos_left"
        android:inputType="textCapWords"
        android:key="pref_left_pos_left"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_left_pos_left"
        android:dependency="pref_left_switch"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_left_pos_right"
        android:inputType="textCapWords"
        android:key="pref_left_pos_right"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_left_pos_right"
        android:dependency="pref_left_switch"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_left_pos_upleft"
        android:inputType="textCapWords"
        android:key="pref_left_pos_upleft"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_left_pos_upleft"
        android:dependency="pref_left_switch"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_left_pos_upright"
        android:inputType="textCapWords"
        android:key="pref_left_pos_upright"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_left_pos_upright"
        android:dependency="pref_left_switch"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_left_pos_downleft"
        android:inputType="textCapWords"
        android:key="pref_left_pos_downleft"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_left_pos_downleft"
        android:dependency="pref_left_switch"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_left_pos_downright"
        android:inputType="textCapWords"
        android:key="pref_left_pos_downright"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_left_pos_downright"
        android:dependency="pref_left_switch"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_left_pos_none"
        android:inputType="textCapWords"
        android:key="pref_left_pos_none"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_left_pos_none"
        android:dependency="pref_left_switch"/>

    <!-- hold left stick value -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_hold_left"
        android:title="@string/pref_title_hold_left"
        android:dependency="pref_left_switch"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_hold_left_pos_up"
        android:inputType="textCapWords"
        android:key="pref_hold_left_pos_up"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_hold_left_pos_up"
        android:dependency="pref_hold_left" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_hold_left_pos_down"
        android:inputType="textCapWords"
        android:key="pref_hold_left_pos_down"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_hold_left_pos_down"
        android:dependency="pref_hold_left" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_hold_left_pos_left"
        android:inputType="textCapWords"
        android:key="pref_hold_left_pos_left"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_hold_left_pos_left"
        android:dependency="pref_hold_left" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_hold_left_pos_right"
        android:inputType="textCapWords"
        android:key="pref_hold_left_pos_right"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_hold_left_pos_right"
        android:dependency="pref_hold_left" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_hold_left_pos_upleft"
        android:inputType="textCapWords"
        android:key="pref_hold_left_pos_upleft"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_hold_left_pos_upleft"
        android:dependency="pref_hold_left" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_hold_left_pos_upright"
        android:inputType="textCapWords"
        android:key="pref_hold_left_pos_upright"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_hold_left_pos_upright"
        android:dependency="pref_hold_left" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_hold_left_pos_downleft"
        android:inputType="textCapWords"
        android:key="pref_hold_left_pos_downleft"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_hold_left_pos_downleft"
        android:dependency="pref_hold_left" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_hold_left_pos_downright"
        android:inputType="textCapWords"
        android:key="pref_hold_left_pos_downright"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_hold_left_pos_downright"
        android:dependency="pref_hold_left" />


</PreferenceScreen>
