<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- motion constrain -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_constrain_right_switch"
        android:title="@string/pref_title_constrain_left_switch" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_constrain_right_hor"
        android:title="@string/pref_title_constrain_left_hor"
        android:dependency="pref_constrain_right_switch"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_constrain_right_ver"
        android:title="@string/pref_title_constrain_left_ver"
        android:dependency="pref_constrain_right_switch"/>

    <!-- right stick value -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_right_switch"
        android:title="@string/pref_title_right_switch" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_right_pos_up"
        android:inputType="textCapWords"
        android:key="pref_right_pos_up"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_right_pos_up"
        android:dependency="pref_right_switch"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_right_pos_down"
        android:inputType="textCapWords"
        android:key="pref_right_pos_down"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_right_pos_down"
        android:dependency="pref_right_switch"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_right_pos_left"
        android:inputType="textCapWords"
        android:key="pref_right_pos_left"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_right_pos_left"
        android:dependency="pref_right_switch" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_right_pos_right"
        android:inputType="textCapWords"
        android:key="pref_right_pos_right"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_right_pos_right"
        android:dependency="pref_right_switch"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_right_pos_upleft"
        android:inputType="textCapWords"
        android:key="pref_right_pos_upleft"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_right_pos_upleft"
        android:dependency="pref_right_switch" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_right_pos_upright"
        android:inputType="textCapWords"
        android:key="pref_right_pos_upright"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_right_pos_upright"
        android:dependency="pref_right_switch"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_right_pos_downleft"
        android:inputType="textCapWords"
        android:key="pref_right_pos_downleft"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_right_pos_downleft"
        android:dependency="pref_right_switch"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_right_pos_downright"
        android:inputType="textCapWords"
        android:key="pref_right_pos_downright"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_right_pos_downright"
        android:dependency="pref_right_switch"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_right_pos_none"
        android:inputType="textCapWords"
        android:key="pref_right_pos_none"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_right_pos_none"
        android:dependency="pref_right_switch" />

    <!-- hold left stick value -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_hold_right"
        android:title="@string/pref_title_hold_right"
        android:dependency="pref_right_switch"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_hold_right_pos_up"
        android:inputType="textCapWords"
        android:key="pref_hold_right_pos_up"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_hold_right_pos_up"
        android:dependency="pref_hold_right" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_hold_right_pos_down"
        android:inputType="textCapWords"
        android:key="pref_hold_right_pos_down"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_hold_right_pos_down"
        android:dependency="pref_hold_right" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_hold_left_pos_left"
        android:inputType="textCapWords"
        android:key="pref_hold_right_pos_left"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_hold_right_pos_left"
        android:dependency="pref_hold_right" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_hold_right_pos_right"
        android:inputType="textCapWords"
        android:key="pref_hold_right_pos_right"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_hold_right_pos_right"
        android:dependency="pref_hold_right" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_hold_right_pos_upleft"
        android:inputType="textCapWords"
        android:key="pref_hold_right_pos_upleft"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_hold_right_pos_upleft"
        android:dependency="pref_hold_right" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_hold_right_pos_upright"
        android:inputType="textCapWords"
        android:key="pref_hold_right_pos_upright"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_hold_right_pos_upright"
        android:dependency="pref_hold_right" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_hold_right_pos_downleft"
        android:inputType="textCapWords"
        android:key="pref_hold_right_pos_downleft"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_hold_right_pos_downleft"
        android:dependency="pref_hold_right" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_hold_right_pos_downright"
        android:inputType="textCapWords"
        android:key="pref_hold_right_pos_downright"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_hold_right_pos_downright"
        android:dependency="pref_hold_right" />
</PreferenceScreen>
