<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="net.redlinesoft.androidrobotbtjoystick.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_action_gear"
        android:title="@string/pref_header_general"/>

    <header
        android:fragment="net.redlinesoft.androidrobotbtjoystick.SettingsActivity$JoystickLeftPreferenceFragment"
        android:icon="@drawable/ic_game"
        android:title="@string/pref_header_joystick_left" />

    <header
        android:fragment="net.redlinesoft.androidrobotbtjoystick.SettingsActivity$JoystickRightPreferenceFragment"
        android:icon="@drawable/ic_game"
        android:title="@string/pref_header_joystick_right" />

</preference-headers>
